--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,12 @@
 *.zip
 *.tar.gz
 *.rar
+target/*
+mvnw.*
+*.mvn
+*.idea
+mvnw
+jc.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
